force-app/main/default/objects/Territory_Budget_SK_Branch_Seasonality__c/Territory_Budget_SK_Branch_Seasonality__c.object-meta.xml
<CustomObject>
    <label>Territory Budget SK Branch Seasonality</label>
    <nameField>
        <displayFormat>BBS-{0000}</displayFormat>
        <label>BBS ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Budget SK Branch Seasonality</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>