force-app/main/default/objects/Territory_Budget_SK_Branch_Seasonality__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Territory Budget SK Branch Seasonality</relationshipLabel>
    <relationshipName>Branch_Budget_Seasonality_SK</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>