force-app/main/default/objects/Territory_Budget_SK_Branch_Seasonality__c/fields/EPI_Code__c.field-meta.xml
<CustomField>
    <fullName>EPI_Code__c</fullName>
    <formula>Product__r.EPI_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EPI Code</label>
    <type>Text</type>
</CustomField>