force-app/main/default/objects/Territory_Budget_SK_Branch_Seasonality__c/fields/m06_June_Budget__c.field-meta.xml
<CustomField>
    <fullName>m06_June_Budget__c</fullName>
    <label>m06_June Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>