force-app/main/default/objects/Territory_Budget_SK_Branch_Seasonality__c/fields/m12_December_Budget__c.field-meta.xml
<CustomField>
    <fullName>m12_December_Budget__c</fullName>
    <label>m12_December Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>