force-app/main/default/objects/Territory_Budget_SK_Branch_Seasonality__c/fields/p01_January__c.field-meta.xml
<CustomField>
    <fullName>p01_January__c</fullName>
    <label>p01 January</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>