force-app/main/default/objects/Territory_Budget_SK_Branch_Seasonality__c/fields/p02_February__c.field-meta.xml
<CustomField>
    <fullName>p02_February__c</fullName>
    <label>p02 February</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>