force-app/main/default/objects/Territory_Budget_SK_Branch_Seasonality__c/fields/p03_March__c.field-meta.xml
<CustomField>
    <fullName>p03_March__c</fullName>
    <label>p03 March</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>