force-app/main/default/objects/Territory_Budget_SK_Branch_Seasonality__c/fields/p04_April__c.field-meta.xml
<CustomField>
    <fullName>p04_April__c</fullName>
    <label>p04 April</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>