force-app/main/default/objects/Territory_Budget_SK_Branch_Seasonality__c/fields/p05_May__c.field-meta.xml
<CustomField>
    <fullName>p05_May__c</fullName>
    <label>p05 May</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>