force-app/main/default/objects/Territory_Budget_SK_Branch_Seasonality__c/fields/p06_June__c.field-meta.xml
<CustomField>
    <fullName>p06_June__c</fullName>
    <label>p06 June</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>