force-app/main/default/objects/Territory_Budget_SK_Branch_Seasonality__c/fields/p07_July__c.field-meta.xml
<CustomField>
    <fullName>p07_July__c</fullName>
    <label>p07 July</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>