force-app/main/default/objects/Territory_Budget_SK_Branch_Seasonality__c/fields/p08_August__c.field-meta.xml
<CustomField>
    <fullName>p08_August__c</fullName>
    <label>p08 August</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>