force-app/main/default/objects/Territory_Budget_SK_Branch_Seasonality__c/fields/p09_September__c.field-meta.xml
<CustomField>
    <fullName>p09_September__c</fullName>
    <label>p09 September</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>