force-app/main/default/objects/Territory_Budget_SK_Branch_Seasonality__c/fields/p10_October__c.field-meta.xml
<CustomField>
    <fullName>p10_October__c</fullName>
    <label>p10 October</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>