force-app/main/default/objects/Territory_Budget_SK_Branch_Seasonality__c/fields/p11_November__c.field-meta.xml
<CustomField>
    <fullName>p11_November__c</fullName>
    <label>p11 November</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>