force-app/main/default/objects/Territory_Budget_SK_Branch_Seasonality__c/fields/p12_December__c.field-meta.xml
<CustomField>
    <fullName>p12_December__c</fullName>
    <label>p12 December</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>