force-app/main/default/objects/Territory_Budget_SK_Branch_Seasonality__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Territory Budget SK Branch Seasonality</relationshipLabel>
    <relationshipName>Branch_Budget_Seasonality_SK</relationshipName>
    <type>Lookup</type>
</CustomField>