force-app/main/default/objects/Territory_Budget_SK_Branch_Seasonality__c/fields/pTotal__c.field-meta.xml
<CustomField>
    <fullName>pTotal__c</fullName>
    <formula>round((p01_January__c 
+ p02_February__c 
+ p03_March__c 
+ p04_April__c 
+ p05_May__c 
+ p06_June__c 
+ p07_July__c 
+ p08_August__c 
+ p09_September__c 
+ p10_October__c 
+ p11_November__c 
+ p12_December__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>pTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>