force-app/main/default/objects/Territory_Budget_SK_Branch_Seasonality__c/fields/Territory_Sales_Area__c.field-meta.xml
<CustomField>
    <fullName>Territory_Sales_Area__c</fullName>
    <formula>Branch__r.Territory_ID_SK__r.Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Sales Area</label>
    <type>Text</type>
</CustomField>