force-app/main/default/objects/Territory_Budget_SK_Branch_Seasonality__c/fields/Territory_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Territory_Sales_Manager__c</fullName>
    <formula>Branch__r.Territory_ID_SK__r.Sales_Manager__r.Person_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Sales Manager</label>
    <type>Text</type>
</CustomField>